--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -541,7 +541,6 @@ RefContentProposal_trackingBranch=tracking branch
 RefContentProposal_tree=tree
 RefContentProposal_unknownObject=locally unknown object
 ReflogView_DateColumnHeader=Date
-ReflogView_ErrorOnLoad=Loading the reflog encountered an error; see the Error Log for more information
 ReflogView_ErrorOnOpenCommit=Error opening commit
 ReflogView_MessageColumnHeader=Reflog Message
 ReflogView_CommitColumnHeader=Commit
@@ -827,10 +826,15 @@ CommitDialog_Path=Path
 CommitDialog_Title=Commit Changes to Git Repository
 CommitDialog_IgnoreErrors=Ignore warnings and errors
 CommitDialog_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
-CommitDialog_WrongTypeOfCommitMessageProvider=The CommitMessageProvider extension {0} contributed by {1} has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
-CommitDialog_ErrorCreatingCommitMessageProvider=The CommitMessageProvider extension {0} contributed by {1} could not be created
+CommitDialog_WrongTypeOfCommitMessageProvider=The extension used as CommitMessageProvider has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
 
+SpellcheckableMessageArea_redo=Redo
 SpellcheckableMessageArea_showWhitespace=Show &Whitespace Characters
+SpellcheckableMessageArea_undo=Undo
+SpellCheckingMessageArea_copy=&Copy
+SpellCheckingMessageArea_cut=C&ut
+SpellCheckingMessageArea_paste=&Paste
+SpellCheckingMessageArea_selectAll=Select &All
 CommitMessageComponent_MessageInvalidAuthor=Invalid author specified. Example: A U Thor <author@example.com>
 CommitMessageComponent_MessageInvalidCommitter=Invalid committer specified. Example: C O Mitter <committer@example.com>
 CommitMessageComponent_AmendingCommitInRemoteBranch=The commit being amended has already been published to a remote branch.
@@ -954,7 +958,6 @@ FetchGerritChangePage_ContentAssistDescription=Patch set {0} of change {1}
 FetchGerritChangePage_ContentAssistTooltip=Press {0} to see a filtered list of changes
 FetchGerritChangePage_CreatingBranchTaskName=Creating branch
 FetchGerritChangePage_CreatingTagTaskName=Creating tag
-FetchGerritChangePage_FetchingRemoteRefsMessage=Fetching remote refs from {0}
 FetchGerritChangePage_FetchingTaskName=Fetching change {0}
 FetchGerritChangePage_GeneratedTagMessage=Generated for Gerrit change {0}
 FetchGerritChangePage_GetChangeTaskName=Get change from Gerrit
@@ -963,7 +966,7 @@ FetchGerritChangePage_LocalBranchCheckout=Check out new branch
 FetchGerritChangePage_MissingChangeMessage=Please provide a change
 FetchGerritChangePage_PageMessage=Please select a Gerrit URI and change to fetch
 FetchGerritChangePage_PageTitle=Fetch a change from Gerrit into repository {0}
-FetchGerritChangePage_ShowingProposalsJobName=Showing proposals
+FetchGerritChangePage_RunInBackground=&Run in background
 FetchGerritChangePage_SuggestedRefNamePattern=change/{0}/{1}
 FetchGerritChangePage_TagNameText=Tag &name:
 FetchGerritChangePage_TagRadio=Create and check out a &tag
@@ -1110,7 +1113,6 @@ LaunchFinder_RunningLaunchTitle=Running Launch
 LaunchFinder_SearchLaunchConfiguration=Search running launch configuration
 LaunchFinder_ContinueQuestion=Continue all the same?
 BranchNameNormalizer_Tooltip=Type {0} to get an auto-corrected branch name
-BranchNameNormalizer_TooltipForTag=Type {0} to get an auto-corrected tag name
 BranchRebaseMode_Rebase=Rebase
 BranchRebaseMode_Preserve=Rebase preserving merge commits
 BranchRebaseMode_Interactive=Rebase interactively
@@ -1306,7 +1308,6 @@ DiffEditorPage_WarningNoDiffForMerge=Cannot compute diff for a merge commit.
 DiscardChangesAction_confirmActionTitle=Discard Local Changes
 DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored.{0}\n\nAre you sure you want to do this?
 DiscardChangesAction_discardChanges=Discard Changes
-DiscardChangesAction_discardChangesButtonText=&Discard Changes
 Disconnect_disconnect=Disconnect
 
 GitCompareEditorInput_CompareResourcesTaskName=Comparing Resources
@@ -1479,15 +1480,7 @@ CommitActionHandler_repository=Repository: {0}
 CommitEditor_couldNotShowRepository=Could not show repository
 CommitEditor_couldNotFindStashCommit=Could not find stash commit
 CommitEditor_couldNotGetStashIndex=Could not get stash index for commit ''{0}''
-CommitEditor_showGitRepo=Show Git Repository
-CommitEditor_toolbarApplyStash=Apply Stashed Changes
-CommitEditor_toolbarDeleteStash=Delete Stashed Commit...
-CommitEditor_toolbarCreateTag=Create Tag...
-CommitEditor_toolbarCreateBranch=Create Branch...
-CommitEditor_toolbarCheckOut=Check Out
-CommitEditor_toolbarCherryPick=Cherry-Pick...
-CommitEditor_toolbarRevert=Revert Commit
-CommitEditor_toolbarShowInHistory=Show in History
+CommitEditor_showGitRepo=Show Git repository
 CommitEditor_TitleHeaderCommit=Commit {0}
 CommitEditor_TitleHeaderStashedCommit=Stashed Commit {0}
 CommitEditorInput_Name={0} [{1}]
@@ -1664,7 +1657,6 @@ NewRemoteDialog_PushRadio=Configure &push
 NewRemoteDialog_RemoteAlreadyExistsMessage=Remote {0} already exists
 NewRemoteDialog_WindowTitle=New Remote
 NewRepositoryWizard_WizardTitle=Create a Git Repository
-NonBlockingWizardDialog_BackgroundJobName=Background Job ({0})
 NonDeletedFilesDialog_NonDeletedFilesMessage=The files below could not be deleted, \nperhaps because of some temporary file locks\nor because a directory represents a submodule
 NonDeletedFilesDialog_NonDeletedFilesTitle=Not deleted Files
 NonDeletedFilesDialog_RetryDeleteButton=&Retry delete
@@ -1752,7 +1744,7 @@ ValidationUtils_InvalidRefNameMessage={0} is not a valid name for a ref
 ValidationUtils_InvalidRevision=Invalid revision {0}
 ValidationUtils_RefAlreadyExistsMessage=Ref {0} already exists
 ValidationUtils_RefNameConflictsWithExistingMessage=Name conflicts with existing refs: {0}
-ValidationUtils_PleaseEnterNameMessage=Please enter a ref name
+ValidationUtils_PleaseEnterNameMessage=Please enter a name
 
 GitMergeEditorInput_CalculatingDiffTaskName=Calculating Differences
 GitMergeEditorInput_CheckingResourcesTaskName=Checking resources
@@ -1812,7 +1804,7 @@ StagingView_Add_Change_ID=Add Change-Id
 StagingView_cancelCommitAfterSaving=Do you want to cancel the commit, so you can first handle (e.g. stage) the newly saved files?
 StagingView_Commit=&Commit
 StagingView_CommitToolTip=Commit ({0})
-StagingView_CommitAndPush=Co&mmit and Push...
+StagingView_CommitAndPush=Commit and &Push...
 StagingView_checkoutFailed=Checking out files failed
 StagingView_commitFailed=Commit failed
 StagingView_committingNotPossible=Committing is not possible
@@ -1949,5 +1941,3 @@ DiffStyleRangeFormatter_diffTruncated=[...] diff truncated after {0} lines.
 
 StagingViewPreferencePage_title=Staging View
 StagingViewPreferencePage_maxLimitListMode=Switch to compact mode if files number exceeds:
-
-CommandConfirmationHardResetDialog_resetButtonLabel=&Reset
