--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -2362,6 +2362,31 @@
          </activeWhen>
       </handler>
       <handler
+            commandId="org.eclipse.egit.ui.RepositoriesViewRemove">
+         <class
+               class="org.eclipse.egit.ui.internal.repository.tree.command.RemoveCommand">
+         </class>
+         <activeWhen>
+            <iterate ifEmpty="false">
+               <instanceof value="org.eclipse.egit.ui.internal.repository.tree.RepositoryNode" />
+            </iterate>
+         </activeWhen>
+      </handler>
+      <handler
+            commandId="org.eclipse.egit.ui.RepositoriesViewDelete">
+         <class
+               class="org.eclipse.egit.ui.internal.repository.tree.command.DeleteCommand">
+         </class>
+         <activeWhen>
+            <and>
+               <count value="1" />
+               <iterate>
+                  <instanceof value="org.eclipse.egit.ui.internal.repository.tree.RepositoryNode" />
+               </iterate>
+            </and>
+         </activeWhen>
+      </handler>
+      <handler
             commandId="org.eclipse.egit.ui.CheckoutCommand">
          <class
                class="org.eclipse.egit.ui.internal.repository.tree.command.CheckoutCommand">
@@ -3859,37 +3884,13 @@
                commandId="org.eclipse.egit.ui.RepositoriesViewRemove"
                label="%RepoViewRemove.label"
                style="push">
-            <visibleWhen
-                  checkEnabled="false">
-               <and>
-                  <count
-                        value="+">
-                  </count>
-                  <iterate>
-                     <instanceof
-                           value="org.eclipse.egit.ui.internal.repository.tree.RepositoryNode">
-                     </instanceof>
-                  </iterate>
-               </and>
-            </visibleWhen>
+            <visibleWhen checkEnabled="true" />
          </command>
          <command
                commandId="org.eclipse.egit.ui.RepositoriesViewDelete"
                label="%RepoViewDeleteRepository.label"
                style="push">
-            <visibleWhen
-                  checkEnabled="false">
-               <and>
-                  <count
-                        value="1">
-                  </count>
-                  <iterate>
-                     <instanceof
-                           value="org.eclipse.egit.ui.internal.repository.tree.RepositoryNode">
-                     </instanceof>
-                  </iterate>
-               </and>
-            </visibleWhen>
+            <visibleWhen checkEnabled="true" />
          </command>
       </menuContribution>
       <menuContribution
@@ -4143,6 +4144,7 @@
                </visibleWhen>
             </command>
             <menu
+                  id="egit.menu.stashes"
                   label="%StashesMenu.label">
                <dynamic
                      class="org.eclipse.egit.ui.internal.actions.StashesMenu"
@@ -4215,6 +4217,7 @@
                   visible="true">
             </separator>
             <menu
+                  id="egit.menu.remote"
                   label="%RemoteSubMenu.label">
                <command
                      commandId="org.eclipse.egit.ui.team.Push"
@@ -4280,6 +4283,7 @@
                   name="org.eclipse.egit.ui.branchSeparator">
             </separator>
             <menu
+                  id="egit.menu.switch"
                   label="%SwitchToMenu.label"
                   icon="icons/obj16/branches_obj.gif">
                <dynamic
@@ -4297,6 +4301,7 @@
                   name="org.eclipse.egit.ui.AdvancedSeparator">
             </separator>
             <menu
+                  id="egit.menu.repo"
                   label="%RepositorySubMenu.label">
                <visibleWhen
                      checkEnabled="false">
@@ -4354,6 +4359,7 @@
                      visible="true">
                </separator>
                <menu
+                     id="egit.menu.repo.switchto"
                      label="%SwitchToMenu.label"
                      icon="icons/obj16/branches_obj.gif">
                   <dynamic
@@ -4363,6 +4369,7 @@
                </menu>
             </menu>
             <menu
+                  id="egit.menu.advanced"
                   label="%AdvancedMenu.label">
                <command
                      commandId="org.eclipse.egit.ui.team.RenameBranch"
@@ -4390,6 +4397,7 @@
                   name="org.eclipse.egit.ui.SynchronizeWithSeparator"
                   visible="true" />
                <menu
+                  id="egit.menu.synchronize"
                   label="%SynchronizeWith_label"
                   icon="$nl$/icons/obj16/synchronize.png">
                   <dynamic
@@ -4520,6 +4528,7 @@
             </command>
             <menu
                   icon="icons/obj16/rebase.gif"
+                  id="egit.menu.rebase"
                   label="%RebaseMenu.label">
                <command
                      commandId="org.eclipse.egit.ui.org.eclipse.egit.ui.AbortRebase"
@@ -4955,7 +4964,6 @@
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
-            defaultHandler="org.eclipse.egit.ui.internal.repository.tree.command.RemoveCommand"
             id="org.eclipse.egit.ui.RepositoriesViewRemove"
             name="%RemoveRepositoryCommand">
       </command>
@@ -5044,7 +5052,6 @@
       </command>
       <command
             categoryId="org.eclipse.egit.ui.commandCategory"
-            defaultHandler="org.eclipse.egit.ui.internal.repository.tree.command.DeleteCommand"
             id="org.eclipse.egit.ui.RepositoriesViewDelete"
             name="%DeleteRepositoryCommand.name">
       </command>
@@ -6361,5 +6368,11 @@
               priorityLevel="activeWorkbenchWindow">
         </variable>
      </sourceProvider>
+  </extension>
+  <extension
+        point="org.eclipse.ui.startup">
+     <startup
+           class="org.eclipse.egit.ui.internal.clone.GitCloneDropAdapter">
+     </startup>
   </extension>
 </plugin>
