--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -827,8 +827,7 @@ CommitDialog_Path=Path
 CommitDialog_Title=Commit Changes to Git Repository
 CommitDialog_IgnoreErrors=Ignore warnings and errors
 CommitDialog_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
-CommitDialog_WrongTypeOfCommitMessageProvider=The CommitMessageProvider extension {0} contributed by {1} has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
-CommitDialog_ErrorCreatingCommitMessageProvider=The CommitMessageProvider extension {0} contributed by {1} could not be created
+CommitDialog_WrongTypeOfCommitMessageProvider=The extension used as CommitMessageProvider has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
 
 SpellcheckableMessageArea_showWhitespace=Show &Whitespace Characters
 CommitMessageComponent_MessageInvalidAuthor=Invalid author specified. Example: A U Thor <author@example.com>
@@ -1306,7 +1305,6 @@ DiffEditorPage_WarningNoDiffForMerge=Cannot compute diff for a merge commit.
 DiscardChangesAction_confirmActionTitle=Discard Local Changes
 DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored.{0}\n\nAre you sure you want to do this?
 DiscardChangesAction_discardChanges=Discard Changes
-DiscardChangesAction_discardChangesButtonText=&Discard Changes
 Disconnect_disconnect=Disconnect
 
 GitCompareEditorInput_CompareResourcesTaskName=Comparing Resources
