--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -2441,12 +2441,9 @@
                class="org.eclipse.egit.ui.internal.commit.command.CheckoutHandler">
          </class>
          <activeWhen>
-            <and>
-               <count value="1" />
-               <iterate ifEmpty="false">
-                  <adapt type="org.eclipse.egit.ui.internal.commit.RepositoryCommit" />
-               </iterate>
-            </and>
+            <with variable="activePart">
+               <instanceof value="org.eclipse.egit.ui.internal.commit.CommitEditor" />
+            </with>
          </activeWhen>
       </handler>
       <handler
