--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -827,7 +827,8 @@ CommitDialog_Path=Path
 CommitDialog_Title=Commit Changes to Git Repository
 CommitDialog_IgnoreErrors=Ignore warnings and errors
 CommitDialog_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
-CommitDialog_WrongTypeOfCommitMessageProvider=The extension used as CommitMessageProvider has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
+CommitDialog_WrongTypeOfCommitMessageProvider=The CommitMessageProvider extension {0} contributed by {1} has the wrong type (it must implement org.eclipse.egit.ui.ICommitMessageProvider)
+CommitDialog_ErrorCreatingCommitMessageProvider=The CommitMessageProvider extension {0} contributed by {1} could not be created
 
 SpellcheckableMessageArea_showWhitespace=Show &Whitespace Characters
 CommitMessageComponent_MessageInvalidAuthor=Invalid author specified. Example: A U Thor <author@example.com>
@@ -1478,7 +1479,6 @@ CommitEditor_couldNotShowRepository=Could not show repository
 CommitEditor_couldNotFindStashCommit=Could not find stash commit
 CommitEditor_couldNotGetStashIndex=Could not get stash index for commit ''{0}''
 CommitEditor_showGitRepo=Show Git repository
-CommitEditor_toolbarCheckOut=Check Out
 CommitEditor_TitleHeaderCommit=Commit {0}
 CommitEditor_TitleHeaderStashedCommit=Stashed Commit {0}
 CommitEditorInput_Name={0} [{1}]
