--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1306,6 +1306,7 @@ DiffEditorPage_WarningNoDiffForMerge=Cannot compute diff for a merge commit.
 DiscardChangesAction_confirmActionTitle=Discard Local Changes
 DiscardChangesAction_confirmActionMessage=This will discard all local changes for the selected resources. Untracked files will be ignored.{0}\n\nAre you sure you want to do this?
 DiscardChangesAction_discardChanges=Discard Changes
+DiscardChangesAction_discardChangesButtonText=&Discard Changes
 Disconnect_disconnect=Disconnect
 
 GitCompareEditorInput_CompareResourcesTaskName=Comparing Resources
@@ -1479,7 +1480,6 @@ CommitEditor_couldNotShowRepository=Could not show repository
 CommitEditor_couldNotFindStashCommit=Could not find stash commit
 CommitEditor_couldNotGetStashIndex=Could not get stash index for commit ''{0}''
 CommitEditor_showGitRepo=Show Git repository
-CommitEditor_toolbarCheckOut=Check Out
 CommitEditor_TitleHeaderCommit=Commit {0}
 CommitEditor_TitleHeaderStashedCommit=Stashed Commit {0}
 CommitEditorInput_Name={0} [{1}]
